<resources>
    <string name="app_name">Enrich</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="Rs">\u20B9</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="add_services_to_cart_error">You cannot add services from different stores. Please remove the previous services.</string>
    <string name="services_looks_error">Cannot add services and looks together.</string>
    <string name="more_than_one_looks_error">Cannot add more than one look</string>
    <string name="location_rationale">Location permission is needed for core functionality</string>
    <string name="sms_rationale">We need to read your incoming messages to read the OTP directly</string>
    <string name="phone_state_rationale">Phone State permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="settings">Settings</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="GOOGLE_API_KEY">AIzaSyBX76j24HS3ivetOE11wActiTz5qTVK_0E</string>
    <string name="PLACES_API_KEY">AIzaSyCvkjv6yK5Rti3lqKdViUBIMExD_l2FoEo</string>
    <string name="spin">Spin</string>
    <string name="stop">Stop</string>
    <string name="wait">Wait</string>
    <string name="alert">Alert</string>
    <string name="alert_timeout">Connection time out</string>
    <string name="ok">OK</string>
    <string name="facebook_app_id">2253022791599567</string>
    <string name="fb_login_protocol_scheme">fb2253022791599567</string>
    <string name="semgent_write_key">vlYWHeIjxVNaZCyRHlxsyY47xjAdKddx</string>
    <string name="txt_refresh">Refresh</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="txt_confirm_order">Confirm Order</string>
    <string name="txt_pay_at_salon">Pay at Salon</string>
    <string name="txt_back">Back</string>
    <string name="txt_dummy_frnd">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse feugiat nunc vitae mi sollicitudin finibus. Cras ultricies tempus lectus a facilisis.</string>
    <string name="txt_send_invite">Send Invite</string>
    <string name="txt_select_frnd">Select 3 Friends</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_continue_shopping">Continue shopping</string>
    <string name="txt_refer_a_friend_intro_page">Do you like Enrich services? Do you think your friends would like us too? Refer them and get rewarded for it!</string>
    <string name="txt_refer_a_frnd_intro_link">How this works?</string>
    <string name="txt_refer_a_frnd_popup_txt1">Select three friends or family whom you want to refer, and tap on \'Continue\'. If your selection is valid, you will be allowed to proceed.</string>
    <string name="txt_share_code_text">Share Your Invite Code</string>
    <string name="txt_refer_a_frnd_popup_txt2">Selection is valid if the guest is not an existing customer, and if the guest has not already been referred by someone else.


</string>

    <string name="txt_rfrsfrnd_explain_text">Select three friends or family whom you want to refer, and tap on \'Continue\'. If your selection is valid, you will be allowed to proceed.\n\n\nSelection is valid if the guest is not an existing customer, and if the guest has not already been referred by someone else.\n\n\nIf the referred guest downloads the app and completes a booking and visit, you will get 250 points, and your referred guest will get 50 points, in your respective Enrich accounts.</string>
    <string name="txt_refer_a_frnd_popup_txt3">If the referred guest downloads the app and completes a booking and visit, you will get 250 points, and your referred guest will get 50 points, in your respective Enrich accounts.

</string>
    <string name="txt_referal_input_text">Enter your 10 digit referral code</string>
</resources>
