<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.activities.CodeRedeemActivity">
    <ImageView
        android:id="@+id/backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="18.7dp"
        android:layout_marginTop="40.5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/barrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.enrich.salonapp.ui.views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:text="Back"
        android:textColor="#1a1a1a"
        android:textSize="@dimen/dimen_18sp"
        app:font_type="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--<com.enrich.salonapp.ui.views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:gravity="center"
        android:text="@string/txt_back"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp"
        app:font_type="bold" />
</LinearLayout>
-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dimen_18dp"
        android:layout_marginLeft="@dimen/dimen_18dp"
        android:layout_marginTop="@dimen/dimen_68dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/redeemlabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80.9dp"
        android:layout_marginLeft="80.9dp"
        android:layout_marginTop="200.1dp"
        android:src="@drawable/giftbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.enrich.salonapp.ui.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_dummy_frnd"
        android:textColor="@color/code_redeem_text_color"
        android:textSize="@dimen/dimen_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvreddem"/>

    <!-- <com.enrich.salonapp.ui.views.CustomEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
         android:layout_marginEnd="33dp"
         android:layout_marginRight="33dp"
         android:layout_marginBottom="115dp"
         android:gravity="center_horizontal"
         android:hint="@string/txt_referal_input_text"
         android:textColor="@color/code_redeem_referral_code"
         android:textColorHint="@color/code_redeem_referral_code"
         android:textSize="@dimen/dimen_12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:backgroundTint="@android:color/black"
         android:id="@+id/edtrefral"
         app:layout_constraintTop_toBottomOf="@id/tvreddem"

         />-->
    <!--<ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/edtrefral"
        android:src="@drawable/cross"
        android:layout_marginBottom="127dp"
        android:layout_marginEnd="45.2dp"
        android:layout_marginRight="45.2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="63.5dp"
        android:layout_marginLeft="63.5dp"
        android:layout_marginEnd="62.5dp"
        android:layout_marginRight="62.5dp"
        android:layout_marginBottom="110.5dp"
        app:layout_constraintTop_toBottomOf="@id/tvreddem"
        android:id="@+id/referallayout">

        <com.enrich.salonapp.ui.views.CustomEditText
            android:backgroundTint="@android:color/black"
            android:id="@+id/edtrefral"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            android:textColor="@color/code_redeem_referral_code"
            android:textColorHint="@color/code_redeem_referral_code"
            android:textSize="@dimen/dimen_14sp"
            android:hint="@string/txt_referal_input_text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/code_clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/imgcross" />

    </FrameLayout>
    <com.enrich.salonapp.ui.views.CustomButton
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_corner_gold_btn"
        android:gravity="center"
        android:text="@string/txt_continue"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_18sp"
        app:font_type="regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referallayout"

        />
    <com.enrich.salonapp.ui.views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"

        android:gravity="center_horizontal"
        android:text="SKIP"
        android:textColor="@color/code_redeem_text_color"
        android:textSize="@dimen/dimen_12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tvskip"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        />
</android.support.constraint.ConstraintLayout>
